--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ svg {
 }
 
 .container-victory {
-  display: none;
+  /* display: none; */
+  opacity: 0%;
   position: absolute;
   margin: 0 auto;
   right: 40%;
@@ -100,4 +101,29 @@ svg {
   text-align: center;
   margin: 1rem;
   color: #ea4d4d;
+}
+
+/* animation */
+@keyframes opacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes enlargement {
+  0% {
+    width: 470px;
+    height: 185px;
+  }
+  100% {
+    width: 500px;
+    height: 200px;
+  }
+}
+
+.div-animate {
+  animation: enlargement 0.8s ease-in-out 0s infinite alternate,
+    opacity 0.3s ease-in-out 0s forwards;
 }
